--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Member Login | Ucsaaservices</title>
+    <title>UCADSaAReview</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       id="Viewport"
@@ -153,7 +153,7 @@
                 <div class="usaa-transactionalFooter-content">
                   <br />
                   <p class="usaa-transactionalFooter-copyright">
-                    Copyright © 2023 USAA.
+                    Copyright © 2024.
                   </p>
                   <div
                     class="pageFooter-disclosures pageFooter-disclosures--aboveFootnotes"
@@ -175,7 +175,7 @@
                         class="miam-footer-link AccessibilityLink"
                         href=""
                         target="_self"
-                        >Accessibility at USAA</a
+                        >Accessibility at UCADSaAReview</a
                       >
                     </p>
                   </div>
